# WebGTestClient

./: .gitignore  CMakeLists.txt  README.md  diplomWork.cpp  diplomWork.sln  test_Pattern.html
examples/example_find_send/: CMakeLists.txt  find_test.cpp  main.cpp
libs/: ReportingSystem.h  WebGTestClient.h
libs/ReportingSystem/: reportdriver.cpp  reportdriver.h  sqliteDriver.cpp  sqliteDriver.h
libs/WebGTestClient/: WebDriver.h  by.h  capabilities.h  client.cpp  client.h  client.inl  conversions.h  element.cpp  element.h  element.inl  errors.h  js_args.h  keys.h  picojson.h  response_status_code.h  session.cpp  session.h  session.inl  types.h  wait.h  wait_match.h  window.h
libs/WebGTestClient/browsers/: chrome.h
libs/WebGTestClient/detail/: error_handling.h  errors.h  factories.h  factories_impl.h  finder.cpp  finder.h  finder.inl  http_client.h  http_connection.h  http_request.h  keyboard.h  meta_tools.h  resource.h  shared.h  time.h  to_string.h  types.h
tests/: CMakeLists.txt  capabilities_test.cpp  client_test.cpp  diplomWork_test.cpp  environment.h  examples_test.cpp  http_connection_test.cpp  main.cpp  session_test.cpp  webgtestclient_test.cpp
tests/lib/SQLite/: sqlite3.exp  sqlite3.lib
tests/lib/curl-7.55.0/builds/libcurl-vc13-x64-release-dll-ipv6-sspi-winssl-obj-curl/: curl.res
tests/lib/curl-7.55.0/builds/libcurl-vc13-x64-release-dll-ipv6-sspi-winssl-obj-lib/: libcurl.exp  libcurl.lib  libcurl.res
tests/lib/curl-7.55.0/winbuild/: CURL_OBJS.inc  LIBCURL_OBJS.inc  vc140.idb
tests/lib/googletest/: CTestTestfile.cmake  cmake_install.cmake  googletest-distribution.sln
tests/lib/googletest/googlemock/: CTestTestfile.cmake  cmake_install.cmake  gmock.sln
tests/lib/googletest/googletest/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  googletest-distribution.sln  gtest.sln
tests/lib/googletest/googletest/googlemock/: CTestTestfile.cmake  cmake_install.cmake  gmock.sln
tests/lib/googletest/googletest/googletest/: CTestTestfile.cmake  cmake_install.cmake  gtest.sln
